<resources>
    <string name="app_name">Sport Us</string>
    <string name="logo">Sport Us</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1085994318105561</string>

    <string-array name="event_types">
        <item>Corrida</item>
        <item>Futebol</item>
        <item>Vôlei</item>
        <item>Basquete</item>
        <item>Funcional</item>
        <item>Natação</item>
        <item>Crossfit</item>
        <item>Tênis</item>
    </string-array>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="autocomplete_hint">Digite o local</string>

    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="version">Versão: Beta</string>
    <string name="label_event_name">Nome do Evento</string>
    <string name="placeholder_event_name">Dê um nome para seu evento!</string>
    <string name="label_event_address">Endereço</string>
    <string name="label_event_type">Modalidade</string>
    <string name="labe_event_date">Data</string>
    <string name="placeholder_event_date">Selecione o dia</string>
    <string name="label_event_time">Horário</string>
    <string name="placeholder_event_time">Selecione o horário</string>
    <string name="label_event_free">Gratuito</string>
    <string name="label_event_paid">Pago</string>
    <string name="placeholder_event_paid">Informe o preço</string>
    <string name="button_create_event">Criar</string>
    <string name="loading">Carregando...</string>
    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_event_msg">Seu evento será deletado para sempre :(</string>
    <string name="exit">Sair</string>
    <string name="exit_event_msg">Deseja mesmo retirar sua participação do evento?</string>
    <string name="close">Fechar</string>
    <string name="see_more_events">Ver mais eventos!</string>
    <string name="participation_confirm">Sua participação foi confirmada!</string>
    <string name="ask_to_login">É preciso estar logado para Criar ou Participar dos eventos. É muito simples, só Fazer o Login!</string>
    <string name="login">Fazer Login</string>
    <string name="logout">Fazer logout</string>
    <string name="ask_to_logout">Tem certeza que quer sair?</string>
    <string name="button_edit_photo">Editar foto</string>
    <string name="label_edit_name">Nome</string>
    <string name="label_edit_email">E-mail</string>
    <string name="label_edit_city">Cidade - Estado</string>
    <string name="label_age">Idade</string>
    <string name="label_edit_interests">O que você gosta?</string>
    <string name="save">Salvar</string>
    <string name="button_participants">Participantes</string>
    <string name="button_enjoy">Participar</string>
    <string name="button_see_events">Ver os eventos</string>
    <string name="facebook_login">Entrar com o Facebook</string>
    <string name="button_signin">Se Cadastre</string>
    <string name="button_enter">Entrar</string>
    <string name="label_password">Senha</string>
    <string name="button_edit_profile">Editar meu perfil</string>
    <string name="label_profile_interests">Interesses em:</string>
    <string name="name">Nome</string>
    <string name="create_account">Cadastrar</string>
    <string name="button_signup">Já tem cadastro? Entre aqui.</string>
    <string name="tell_more_about_you">Conte mais sobre você</string>
    <string name="confirm_logout">Mas já vai?</string>
    <string name="create_events">Criar Eventos</string>
    <string name="verification_name_event">"Qual o nome do evento? "</string>
    <string name="verification_local_event">"Onde será o seu evento? "</string>
    <string name="verification_type_event">"Qual a modalidade do Evento? "</string>
    <string name="verification_date_event">"Quando será o evento? "</string>
    <string name="verification_time_event">"Que horas será o evento? "</string>
    <string name="verification_price_event">"Qual o preço do evento? "</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="loading_events">Carregando os Eventos...</string>
    <string name="events">Eventos</string>
    <string name="loading_participants">Carregando Participantes...</string>
    <string name="profile">Perfil</string>
    <string name="enter_account">Entrando com sua conta...</string>
    <string name="home">Home</string>
    <string name="creating_account">Criando sua conta...</string>
    <string name="delet_account">Deletar conta</string>
    <string name="delete_account_forever">Isso irá apagar sua conta para sempre</string>
    <string name="delete_forever">Sim, apagar</string>
    <string name="delete_account_forever_question">Tem certeza que quer apagar sua conta?</string>
</resources>
