<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/label_event_name"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/eventNameInput"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_event_name"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/label_event_address"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <AutoCompleteTextView
        android:id="@+id/eventAddressInput"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="5"
        android:hint="@string/autocomplete_hint"
        android:singleLine="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/label_event_type"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_drop_down"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/eventTypeInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:gravity="center"
            android:popupBackground="#ffffff"
            android:spinnerMode="dropdown"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@drawable/arrow_down"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/labe_event_date"
                android:textColor="#ffffffff"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/eventDateInput"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:hint="@string/placeholder_event_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/label_event_time"
                android:textColor="#ffffffff"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/eventHourInput"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:hint="@string/placeholder_event_time"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioFreeInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:drawableTint="#ffffff"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/label_event_free"
                    android:textColor="@color/colorWhite"/>

                <RadioButton
                    android:id="@+id/radioPayedInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/label_event_paid"
                    android:textColor="@color/colorWhite"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/eventCostInput"
                    style="@style/InputStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/placeholder_event_paid"
                    android:inputType="number"
                    android:visibility="invisible"
                    tools:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonEventInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:text="@string/button_create_event"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>