<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"/>

    <TextView
        style="@style/labelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_edit_email"/>

    <EditText
        android:id="@+id/inputEmail"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        style="@style/labelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_password"/>

    <EditText
        android:id="@+id/inputPassword"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/doLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_white"
        android:text="@string/button_enter"
        android:textColor="@color/colorPrimaryOption"
        />

    <Button
        android:id="@+id/signButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_red"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/button_signin"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/Facebook"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/facebook_login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"/>
</LinearLayout>